--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.96.0",
