--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -54,12 +54,14 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "@vitejs/plugin-react": "^4.3.4",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.96.0",
     "tailwindcss": "^4.0.6",
     "typescript-eslint": "^8.22.0",
+    "vite": "^6.1.0",
     "vite-plugin-dts": "^4.5.4"
   }
 }
